Replace theme colors with custom colors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,7 @@ h4,
 h5,
 h6 {
   font-family: 'Lato', sans-serif;
-  color: #222;
+  color: var(--oc-gray-9);
 }
 
 pre,
@@ -72,13 +72,12 @@ blockquote {
 .wrapper {
   overflow: hidden;
   position: relative;
+  background-color: white;
 }
 
 .header {
   padding: 20px 0;
   position: relative;
-  background: #f5f5f5;
-  border-bottom: 1px solid #eaeaea;
 }
 
 .nav {
@@ -103,6 +102,7 @@ blockquote {
   display: block;
   max-height: 40px;
   width: auto;
+  border-radius: 3px;
 }
 
 .nav-links {
@@ -114,20 +114,31 @@ blockquote {
 
 .nav-links li {
   display: inline-block;
-  margin: 0 0 0 15px;
+  margin: 0 8px;
+  padding: 7px 10px;
+  background-color: var(--oc-gray-1);
+  border-radius: 3px;
+  box-shadow: 2px 2px 4px var(--oc-gray-2);
+  transition: box-shadow 150ms ease-in-out;
 }
 
 .nav-links li:first-child {
   margin-left: 0;
 }
 
-.nav-links a {
-  text-decoration: none;
-  color: #444;
+.nav-links li:hover {
+  box-shadow: 3px 3px 6px var(--oc-gray-3);
+  cursor: pointer;
+  transition: box-shadow 150ms ease-in-out;
 }
 
-.nav-links a:hover {
- color: #111;
+.nav-links li a {
+  text-decoration: none;
+  color: var(--oc-gray-7);
+}
+
+.nav-links li:hover a {
+ color: var(--oc-gray-9);
 }
 
 .content {
@@ -138,12 +149,12 @@ blockquote {
   padding: 0 15px;
   font-size: 16px;
   line-height: 1.7;
-  color: #555;
+  color: var(--oc-gray-8);
 }
 
 .article-title {
   font-size: 34px;
-  color: #222;
+  color: var(--oc-gray-8);
   margin: 0;
   line-height: 1.3;
 }
@@ -151,7 +162,7 @@ blockquote {
 .article-date {
   font-size: 16px;
   font-family: 'Lato', sans-serif;
-  color: #ccc;
+  color: var(--oc-gray-5);
 }
 
 .article-content p {
@@ -161,13 +172,13 @@ blockquote {
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: medium solid #f0f0f0;
+  border-bottom: medium solid var(--oc-gray-2);
   transition: border-color 600ms;
 }
 
 .article-content a:hover,
 .article-content a:active {
-  border-color: #606060;
+  border-color: var(--oc-gray-5);
 }
 
 .article-content hr {
@@ -176,14 +187,14 @@ blockquote {
   height: 1px;
   overflow: hidden;
   border: none;
-  background: #e8e8e8;
+  background: var(--oc-gray-1);
 }
 
 .article-taxonomy {
   list-style: none;
   padding-left: 0;
   font-family: 'Lato', sans-serif;
-  color: #404040;
+  color: var(--oc-gray-5);
   font-size: 14px;
   text-align: left;
 }
@@ -193,7 +204,7 @@ blockquote {
   margin: 5px 0 10px;
   height: 1px;
   border: none;
-  background: #e8e8e8;
+  background: var(--oc-gray-1);
 }
 
 .article-taxonomy a {
@@ -206,12 +217,12 @@ blockquote {
 
 .article-taxonomy a:hover,
 .article-taxonomy a:active {
-  color: #ccc;
+  color: var(--oc-gray-1);
 }
 
 .article-image-large {
   padding: 2px;
-  border: solid 1px #e6e6e6;
+  border: solid 1px var(--oc-gray-2);
   opacity: 1;
   transition: opacity 1s;
 }
@@ -246,7 +257,7 @@ blockquote {
   display: block;
   padding: 4px 0;
   font-family: 'Lato', sans-serif;
-  color: #ccc;
+  color: var(--oc-gray-3);
   font-size: 14px;
 }
 
@@ -263,13 +274,13 @@ blockquote {
   font-size: 17px;
   font-family: 'Lato', sans-serif;
   font-weight: bold;
-  color: #222;
-  border-bottom: 1px solid #ddd;
+  color: var(--oc-gray-8);
+  border-bottom: 1px solid var(--oc-gray-3);
   transition: border-color 300ms;
 }
 
 .list-item a:hover {
-  border-color: #222;
+  border-color: var(--oc-gray-8);
 }
 
 .category-item {
@@ -286,14 +297,14 @@ blockquote {
   font-size: 19px;
   font-family: 'Lato', sans-serif;
   font-weight: bold;
-  color: #222;
+  color: var(--oc-gray-8);
   transition: color 300ms;
 }
 
 .category-item-count {
   font-family: 'Lato', sans-serif;
   margin-right: 15px;
-  color: #ccc;
+  color: var(--oc-gray-5);
   font-size: 14px;
   font-weight: bold;
 }
@@ -313,7 +324,7 @@ blockquote {
   text-decoration: none;
   font-family: 'Lato', sans-serif;
   font-weight: bold;
-  color: #222;
+  color: var(--oc-gray-8);
   transition: color 300ms;
 }
 
@@ -321,7 +332,7 @@ blockquote {
 .tag-cloud-item a:active,
 .category-item a:hover,
 .category-item a:active {
-   color: #ccc;
+   color: var(--oc-gray-5);
 }
 
 .footer {
@@ -336,7 +347,7 @@ blockquote {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: #ccc;
+  color: var(--oc-gray-5);
   font-size: 14px;
 }
 
@@ -347,14 +358,14 @@ blockquote {
 }
 
 .footer-links a {
-  color: #888;
+  color: var(--oc-gray-7);
   text-decoration: none;
   transition: color 300ms;
   margin: 0 5px;
 }
 
 .footer-links a:hover {
-  color: #222;
+  color: var(--oc-gray-8);
 }
 
 .footer-links li::before {
@@ -382,18 +393,18 @@ blockquote {
 .page-links a {
   text-decoration: none;
   padding: 0 5px;
-  color: #555;
+  color: var(--oc-gray-5);
   transition: color 300ms;
 }
 
 .page-links a:hover {
-  color: #ccc;
+  color: var(--oc-gray-5);
 }
 
 .page-links-active a,
 .page-links-disabled a {
   text-decoration: none;
-  color: #ccc;
+  color: var(--oc-gray-5);
 }
 
 .error-page-title {
@@ -413,7 +424,7 @@ blockquote {
 
 .error-page-content a:hover,
 .error-page-content a:active {
-  color: #ccc;
+  color: var(--oc-gray-5);
 }
 
 .fa {
@@ -472,7 +483,7 @@ blockquote {
   }
 
   .nav-links li {
-    margin: 0 0 0 30px;
+    /* margin: 0 0 0 30px; */
   }
 
   .content {
@@ -498,13 +509,13 @@ blockquote {
   .tag-cloud-title {
     font-size: 38px;
   }
-  
+
   .list-item a {
     /* display: block; */
     padding: 5px 0 0 0;
     font-size: 21px;
   }
-  
+
   .list-item {
     /* display: flex; */
   }
