--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,5 +27,6 @@
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
 
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/open-color.css" media="all">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/fonts.css">
