polish: cleanup formatting of partials and taxonomies appearance not intended to be modified

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,12 @@
+<!-- opens html, body, div -->
 {{ partial "header.html" . }}
 
 <main class="content">
   <div class="list">
     {{ range  (where $.Site.Pages "Type" "posts") }}
-
-    {{ if ne .Page.Title "Posts" }}
-    {{ partial "list-item.html" . }}
-    {{ end }}
-
+      {{ if ne .Page.Title "Posts" }}
+        {{ partial "list-item.html" . }}
+      {{ end }}
     {{ end }}
   </div>
 
@@ -15,4 +14,5 @@
 
 </main>
 
+<!-- closes div, body, html -->
 {{ partial "footer.html" . }}
