--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,34 +1,37 @@
-{{ $pag := $.Paginator }}
-{{ if gt $pag.TotalPages 1 }}
-
+{{ if gt $.Paginator.TotalPages 1 }}
 <ul class="page-links">
-  <li 
-    {{ if not $pag.HasPrev }}class="page-links-disabled"{{ end }}>
-    <a href="{{ if $pag.HasPrev }}{{ $pag.Prev.URL }}{{ end }}" aria-label="Previous"><span aria-hidden="true">&lt;&#160;</span></a>
+  <li
+    {{ if not $.Paginator.HasPrev }}class="page-links-disabled"{{ end }}>
+    <a href="{{ if $.Paginator.HasPrev }}{{ $.Paginator.Prev.URL }}{{ end }}" aria-label="Previous"><span aria-hidden="true">&lt;&#160;</span></a>
   </li>
   {{ $.Scratch.Set "__paginator.ellipsed" false }}
-  {{ range $pag.Pagers }}
-  {{ $right := sub .TotalPages .PageNumber }}
-  {{ $showNumber := or (le .PageNumber 3) (eq $right 0) }}
-  {{ $showNumber := or $showNumber (and (gt .PageNumber (sub $pag.PageNumber 2)) (lt .PageNumber (add $pag.PageNumber 2)))  }}
-  {{ if $showNumber }} 
-    {{ $.Scratch.Set "__paginator.ellipsed" false }}
-    {{ $.Scratch.Set "__paginator.shouldEllipse" false }}
-  {{ else }}
-    {{ $.Scratch.Set "__paginator.shouldEllipse" (not ($.Scratch.Get "__paginator.ellipsed") ) }}
-    {{ $.Scratch.Set "__paginator.ellipsed" true }}
+
+  {{ range $.Paginator.Pagers }}
+    {{ $right := sub .TotalPages .PageNumber }}
+    {{ $showNumber := or (le .PageNumber 3) (eq $right 0) }}
+    {{ $showNumber := or $showNumber (and (gt .PageNumber (sub $.Paginator.PageNumber 2)) (lt .PageNumber (add $.Paginator.PageNumber 2))) }}
+
+    {{ if $showNumber }}
+      {{ $.Scratch.Set "__paginator.ellipsed" false }}
+      {{ $.Scratch.Set "__paginator.shouldEllipse" false }}
+    {{ else }}
+      {{ $.Scratch.Set "__paginator.shouldEllipse" (not ($.Scratch.Get "__paginator.ellipsed") ) }}
+      {{ $.Scratch.Set "__paginator.ellipsed" true }}
   {{ end }}
+
   {{ if $showNumber }}
     <li
-      {{ if eq . $pag }}class="page-links-active"{{ end }}><a href="{{ .URL }}">{{ .PageNumber }}</a>
+      {{ if eq . $.Paginator }}class="page-links-active"{{ end }}><a href="{{ .URL }}">{{ .PageNumber }}</a>
     </li>
-    {{ else if ($.Scratch.Get "__paginator.shouldEllipse") }}    
-  <li class="page-links-disabled"><span aria-hidden="true">&hellip;</span></li>
+  {{ else if ($.Scratch.Get "__paginator.shouldEllipse") }}
+    <li class="page-links-disabled"><span aria-hidden="true">&hellip;</span></li>
   {{ end }}
+
+  <!-- not sure where this end tag comes from -->
   {{ end }}
   <li
-    {{ if not $pag.HasNext }}class="page-links-disabled"{{ end }}>
-    <a href="{{ if $pag.HasNext }}{{ $pag.Next.URL }}{{ end }}" aria-label="Next"><span aria-hidden="true">&#160;&gt;</span></a>
+    {{ if not $.Paginator.HasNext }}class="page-links-disabled"{{ end }}>
+    <a href="{{ if $.Paginator.HasNext }}{{ $.Paginator.Next.URL }}{{ end }}" aria-label="Next"><span aria-hidden="true">&#160;&gt;</span></a>
   </li>
 </ul>
 {{ end }}
